archive/gluetun/sonarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.joejad.com`)
      kind: Rule
      services:
        - name: gluetun
          port: 8989
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
